--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
+  "name": "Digital Dungeon Master",  
   "short_name": "DDM",
-  "name": "Digital Dungeon Master",
   "icons": [
     {
       "src": "/assets/images/app-icon-tiny.png",
@@ -18,7 +18,7 @@
       "type": "image/png"
     }
   ],
-  "start_url": "/index.html",
+  "start_url": "/",
   "display": "standalone",
   "orientation": "portrait"
 }
